--- a/src/main/resources/templates/secteur/secteurItemForm.html
+++ b/src/main/resources/templates/secteur/secteurItemForm.html
@@ -14,11 +14,11 @@
 <body>
 <div class="container">
   <div th:insert="~{utils/menu :: menu}"></div>
+  <h2 class = "mt-4">Ajouter un secteur</h2>
 
+  <hr/>
   <form action="#" method="post" th:action="@{/secteur/SubmitSecteurForm}">
-    <h2 class = "mt-4">Ajouter un secteur</h2>
 
-    <hr/>
     <!-- Form levels error messages here
     <div class = "form-group row ">
       <div class="col-sm-8">
@@ -30,18 +30,18 @@
       </div>
     </div>-->
     <div class = "form-group row ">
-      <label for = "name" class = "col-sm-2 col-form-label">Nom</label>
+      <label for="name" class = "col-sm-2 col-form-label">Nom</label>
       <div class = "col-sm-4">
-        <input type = "text" class = "form-control" placeholder = "Obligatoire" name="name" th:field="*{name}" >
+        <input type = "text" class="form-control" placeholder="Obligatoire" name="name" th:field="${secteur.name}" >
       </div>
       <div class="col-sm-4">
         <span class="text-danger"> </span>
       </div>
     </div>
     <div class = "form-group row">
-      <label for = "description" class = "col-sm-2 col-form-label">Description</label>
+      <label for="description" class="col-sm-2 col-form-label">Description</label>
       <div class = "col-sm-4">
-        <textarea class = "form-control" rows = "3" placeholder = "Max. 50 caractères" name="description">{{ secteur.description }}</textarea>
+        <textarea class = "form-control" rows="3" placeholder="Max. 50 caractères" name="description" th:field="${secteur.description}"></textarea>
       </div>
       <div class="col-sm-4">
         <span class="text-danger"> </span>
@@ -50,14 +50,9 @@
     <div class = "form-group row">
       <label for = "site" class = "col-sm-2 col-form-label">Site</label>
       <div class = "col-sm-4">
-        <select class="form-control" name="site">
-          {% for site in sites %}
-          {% if site.id == secteur.site.id %}
-          <option selected="selected" value="{{ site.id }}">{{ site.name }}</option>
-          {% else %}
-          <option value="{{ site.id }}">{{ site.name }}</option>
-          {% endif %}
-          {% endfor %}
+        <select class="form-control" th:field="${secteur.site}"  id="dropOperator">
+          <option value="0">select site</option>
+          <option th:each="site : ${sites}" th:value="${site.id}" th:text="${site.name}"></option>
         </select>
       </div>
       <div class="col-sm-4">
