--- a/src/main/resources/templates/security/login.html
+++ b/src/main/resources/templates/security/login.html
@@ -17,7 +17,7 @@
 
 
 
-<form method="post" th:action="@{/authenticateTheUser}">
+<form method="post" th:action="@{/login}">
     <div class = "form-group row ">
         <div class="col-sm-8">
             <div th:if="${param.error}">
