--- a/src/main/resources/templates/security/registration.html
+++ b/src/main/resources/templates/security/registration.html
@@ -17,7 +17,7 @@
 
 
 
-<form method="post" th:action="@{/authenticateTheUser}">
+<form method="post" th:action="@{/registration}" oninput='password2.setCustomValidity(passwordConfirm.value != password.value ? "Passwords do not match." : "")'>
     <div class = "form-group row ">
         <div class="col-sm-8">
             <div th:if="${param.error}">
@@ -39,6 +39,10 @@
     <div class="form-group">
         <label for="password">Mot de passe</label>
         <input type="password" name="password" class="form-control" id="password" placeholder="pA$$vv0rcl">
+    </div>
+    <div class="form-group">
+        <label for="password">Conformer le mot de passe</label>
+        <input type="password" name="passwordConfirm" class="form-control" id="passwordConfirm" placeholder="pA$$vv0rcl">
     </div>
     <div class="form-check">
         <input type="checkbox" class="form-check-input" id="rememberMe">
