--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -20,6 +20,6 @@
   Logged user: <span sec:authentication="name">Bob</span>
   Roles: <span sec:authentication="principal.authorities">[ROLE_USER, ROLE_ADMIN]</span>
 </div>
-
+<span th:insert="~{utils/scripts :: scripts}"></span>
 </body>
 </html>
