--- a/src/main/resources/templates/utils/menu.html
+++ b/src/main/resources/templates/utils/menu.html
@@ -14,12 +14,11 @@
                 <a class="nav-link dropdown-toggle glyphicon glyphicon-user" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <svg id="i-user" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="20" height="20" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
                         <path d="M22 11 C22 16 19 20 16 20 13 20 10 16 10 11 10 6 12 3 16 3 20 3 22 6 22 11 Z M4 30 L28 30 C28 21 22 20 16 20 10 20 4 21 4 30 Z" />
-                    </svg>
+                    </svg> <span sec:authentication="name">Bob</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <form id="logout" action="{{ path('/logout') }}" class="dropdown-item form-inline my-2 my-lg-0" method="post">
+                    <form id='logout' th:action="@{/logout}" class="dropdown-item form-inline my-2 my-lg-0" method="post">
                         <a class="dropdown-item" href="#" onclick="document.getElementById('logout').submit();">déconnexion</a>
-                        <input type="hidden" name="{{ _csrf.parameterName }}" value="{{ _csrf.token }}" />
                     </form>
                 </div>
 
@@ -29,7 +28,7 @@
                     Ajouter
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/siteItemForm">Site</a>
+                    <a class="dropdown-item" href="/site/siteItemForm">Site</a>
                     <a class="dropdown-item" href="/secteur/secteurItemForm">Secteur</a>
                 </div>
             </li>
@@ -38,7 +37,7 @@
                     Voir
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/">Sites</a>
+                    <a class="dropdown-item" href="/site/list">Sites</a>
                     <a class="dropdown-item" href="/secteur/list">Secteurs</a>
                 </div>
             </li>
