--- a/src/main/resources/templates/secteur/secteurItemForm.html
+++ b/src/main/resources/templates/secteur/secteurItemForm.html
@@ -19,23 +19,13 @@
   <hr/>
   <form action="#" method="post" th:action="@{/secteur/SubmitSecteurForm}">
 
-    <!-- Form levels error messages here
-    <div class = "form-group row ">
-      <div class="col-sm-8">
-       {% if errors != null %}
-        {% for error in errors %}
-        <span class="text-danger" > {{ error.field }}: {{ error.defaultMessage }}</span><br>
-        {% endfor %}
-        {% endif %}
-      </div>
-    </div>-->
     <div class = "form-group row ">
       <label for="name" class = "col-sm-2 col-form-label">Nom</label>
       <div class = "col-sm-4">
         <input type = "text" class="form-control" placeholder="Obligatoire" name="name" th:field="${secteur.name}" >
       </div>
       <div class="col-sm-4">
-        <span class="text-danger"> </span>
+        <span class="text-danger" th:errors="*{secteur.name}"></span>
       </div>
     </div>
     <div class = "form-group row">
@@ -44,7 +34,7 @@
         <textarea class = "form-control" rows="3" placeholder="Max. 50 caractères" name="description" th:field="${secteur.description}"></textarea>
       </div>
       <div class="col-sm-4">
-        <span class="text-danger"> </span>
+        <span class="text-danger" th:errors="*{secteur.description}"> </span>
       </div>
     </div>
     <div class = "form-group row">
@@ -56,13 +46,13 @@
         </select>
       </div>
       <div class="col-sm-4">
-        <span class="text-danger"> </span>
+        <span class="text-danger" th:errors="*{secteur.site}"> </span>
       </div>
     </div>
 
     <div class = "form-group row">
       <div class = "col-sm-10">
-        <input type="hidden" name="id" value="{{ site.id }}">
+        <input type="hidden" name="id" th:field="${secteur.id}">
         <button type = "submit" class = "btn btn-primary">Enregistrer</button>
         <a href="/secteur/list" class = "btn btn-secondary">Annuler</a>
       </div>
