--- a/src/main/resources/templates/voie/voieItemForm.html
+++ b/src/main/resources/templates/voie/voieItemForm.html
@@ -37,6 +37,13 @@
         <span class="text-danger" th:errors="*{voie.description}"> </span>
       </div>
     </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" th:field="*{voie.equiped}" id="equiped">
+      <label class="form-check-label" for="equiped">
+        Voie équipée
+      </label>
+    </div>
+
     <div class = "form-group row">
       <label for = "cotation" class = "col-sm-2 col-form-label">Cotation</label>
       <div class = "col-sm-4">
