--- a/src/main/resources/templates/utils/menu.html
+++ b/src/main/resources/templates/utils/menu.html
@@ -46,7 +46,7 @@
                 </div>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0" th:action="@{/arborescence/find}"  method="get">
+        <form class="form-inline my-2 my-lg-0" th:action="@{/site/find}"  method="get">
             <input class="form-control mr-sm-2" name="searchQuery" type="search" placeholder="Search" aria-label="Search" th:value="*{searchQuery}">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
