--- a/src/main/resources/templates/topo/topoList.html
+++ b/src/main/resources/templates/topo/topoList.html
@@ -30,14 +30,13 @@
         <tbody>
 
         <tr th:each="topo: ${topos}">
-            <td th:text="${topo.site.name}"></td>
+            <td><ul th:each="site: ${topo.sites}"><li th:text="${site.name}"></li></ul> </td>
             <!-- On crée un bouton et on bind les attributs pour pouvoir les récupérer dans le javascript -->
             <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal"
                         th:attr="data-topoid=${topo.id},
-                           data-name=${topo.site.name},
+                           data-name=${topo.owner.username},
                            data-borrowed=${topo.isBorrowed()},
-                           data-owner=${topo.owner.username},
-                           data-borrower=${topo.borrower}">Aperçu</button></td>
+                           data-owner=${topo.owner.username}">Aperçu</button></td>
             <td><a th:href="@{/topo/view(id=${topo.id })}" class="btn btn-primary">Fiche</a></td>
             <td><a th:href="@{/topo/topoItemForm(id=${topo.id })}" class="btn btn-primary">modifier</a></td>
             <td><a th:href="@{/topo/topoDelete(id=${topo.id })}" class="btn btn-danger">supprimer</a></td>
