--- a/src/main/resources/templates/topo/topoList.html
+++ b/src/main/resources/templates/topo/topoList.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:data="http://www.w3.org/1999/xhtml" lang="fr">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:data="http://www.w3.org/1999/xhtml"
+      xmlns:site="http://www.w3.org/1999/xhtml" lang="fr">
 <!--/*@thymesVar id="topo" type="com.begr.escalade.entity.Topo"*/-->
 <head >
     <title>Application escalade</title>
@@ -30,24 +31,10 @@
         <tbody>
 
         <tr th:each="topo: ${topos}">
-<<<<<<< HEAD
             <td th:text="${topo.name}"></td>
             <!-- On crée un bouton et on bind les attributs pour pouvoir les récupérer dans le javascript -->
-            <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal"
-                        th:attr="data-topoid=${topo.id},
-                           data-name=${topo.name},
-                           data-description=${topo.description},
-                           data-borrowed=${topo.isBorrowed()},
-                           data-sites=${topo.sites},
-=======
             <td><ul th:each="site: ${topo.sites}"><li th:text="${site.name}"></li></ul> </td>
             <!-- On crée un bouton et on bind les attributs pour pouvoir les récupérer dans le javascript -->
-            <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal"
-                        th:attr="data-topoid=${topo.id},
-                           data-name=${topo.owner.username},
-                           data-borrowed=${topo.isBorrowed()},
->>>>>>> 6b222a46c4b395c645ccbd0ffa26bb9966ee28ce
-                           data-owner=${topo.owner.username}">Aperçu</button></td>
             <td><a th:href="@{/topo/view(id=${topo.id })}" class="btn btn-primary">Fiche</a></td>
             <td><a th:href="@{/topo/topoItemForm(id=${topo.id })}" class="btn btn-primary">modifier</a></td>
             <td><a th:href="@{/topo/topoDelete(id=${topo.id })}" class="btn btn-danger">supprimer</a></td>
@@ -55,54 +42,10 @@
 
         </tbody>
     </table>
-
-
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">nom du topo</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <p><span class="owner small text-left"></span> <span class="updatedAt small text-right"></span></p>
-                    <div class="description"></div>
-
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
-                    <a href="#" class="btn btn-primary modifier">modifier</a>
-                </div>
-            </div>
-        </div>
-    </div><!-- fin modale -->
-
-    <!-- debut script pour modale -->
-
-
-
-
-
 </div>
 <span th:insert="~{utils/scripts :: scripts}"></span>
 
-<script>
-    $('#myModal').on('show.bs.modal', function (event) {
 
-        var button = $(event.relatedTarget); // Bouton qui a ouvert la modale
-        // On récupère les valeurs data et on les envoie dans les class que l'on veut
-        console.log(button.data("sites"));
-        let sites = button.data("sites");
-        let siteList = JSON.parse(sites);
-
-        $(this).find('.owner').text('Propriétaire: ' + button.data('owner'));
-        $(this).find('.modal-title').text(button.data('name'));
-        $(this).find('.description').text(button.data('description'));
-        $(this).find('.modifier').attr("href", "/topo/topoItemForm?id=" + button.data('topoid'))
-    })
-</script>
 
 </body>
 </html>
