--- a/src/main/resources/templates/utils/menu.html
+++ b/src/main/resources/templates/utils/menu.html
@@ -10,7 +10,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item dropdown">
+            <li sec:authorize="hasAuthority('USER')" class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle glyphicon glyphicon-user" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <svg id="i-user" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="20" height="20" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
                         <path d="M22 11 C22 16 19 20 16 20 13 20 10 16 10 11 10 6 12 3 16 3 20 3 22 6 22 11 Z M4 30 L28 30 C28 21 22 20 16 20 10 20 4 21 4 30 Z" />
@@ -22,8 +22,19 @@
                         <a class="dropdown-item" href="#" onclick="document.getElementById('logout').submit();">déconnexion</a>
                     </form>
                     <a sec:authorize="hasAuthority('USER')" class="dropdown-item" href="/topo/topoItemForm">Ajouter Topo</a>
+                    <a sec:authorize="hasAuthority('USER')" class="dropdown-item" href="/topo/myTopos">Mes Topos</a>
+                    <a sec:authorize="hasAuthority('USER')" class="dropdown-item" href="/reservation/reservationItemForm">Réserver un Topo</a>
                 </div>
 
+            </li>
+            <li sec:authorize="!isAuthenticated()" class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Connexion
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/login">Connexion</a>
+                    <a class="dropdown-item" href="/register">Créer compte</a>
+                </div>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
