--- a/src/main/resources/templates/reservation/reservationItemForm.html
+++ b/src/main/resources/templates/reservation/reservationItemForm.html
@@ -19,7 +19,7 @@
     <h2 class = "mt-4">Réserver un Topo</h2>
 
     <hr/>
-    <form action="#" method="post" th:action="@{/reservation/SubmitReservationForm}">
+    <form th:if="${not #lists.isEmpty(topos)}" action="#" method="post" th:action="@{/reservation/SubmitReservationForm}">
         <div class = "form-group row">
             <label for = "cotation" class = "col-sm-2 col-form-label">Choisir un topo:</label>
             <div class = "col-sm-4">
@@ -41,6 +41,9 @@
         </div>
 
     </form>
+    <div th:if="${#lists.isEmpty(topos)}">
+        <p>Pas de topos disponibles</p>
+    </div>
 </div>
 <span th:insert="~{utils/scripts :: scripts}"></span>
 
