--- a/src/main/resources/templates/topo/topoItemForm.html
+++ b/src/main/resources/templates/topo/topoItemForm.html
@@ -39,15 +39,13 @@
                 <span class="text-danger"> </span>
             </div>
         </div>
+        <div class="checkbox">
+            <label><input th:field="${topo.disponible}" type="checkbox" value="">Disponible</label>
+        </div>
         <div class = "form-group row">
             <label for = "topo" class = "col-sm-2 col-form-label">Site</label>
             <div class = "col-sm-4">
-
-<<<<<<< HEAD
-                <select multiple="multiple" class="form-control" th:field="${topo.sites}"  id="dropOperator">
-=======
                 <select size="10" multiple="multiple" class="form-control" th:field="${topo.sites}"  id="dropOperator">
->>>>>>> 6b222a46c4b395c645ccbd0ffa26bb9966ee28ce
                     <option th:each="site : ${sites}" th:value="${site.id}" th:text="${site.name}"></option>
                 </select>
             </div>
