--- a/src/main/resources/templates/utils/menu.html
+++ b/src/main/resources/templates/utils/menu.html
@@ -24,6 +24,7 @@
                     <a sec:authorize="hasAuthority('USER')" class="dropdown-item" href="/topo/topoItemForm">Ajouter Topo</a>
                     <a sec:authorize="hasAuthority('USER')" class="dropdown-item" href="/topo/myTopos">Mes Topos</a>
                     <a sec:authorize="hasAuthority('USER')" class="dropdown-item" href="/reservation/reservationItemForm">Réserver un Topo</a>
+                    <a sec:authorize="hasAuthority('USER')" class="dropdown-item" href="/reservation/myReservations">Mes réservations</a>
                 </div>
 
             </li>
