--- a/src/main/resources/static/css/myReservedTopos.css
+++ b/src/main/resources/static/css/myReservedTopos.css
@@ -63,11 +63,11 @@ only screen and (max-width: 760px),
     Label the data
     */
     td:nth-of-type(1):before { content: "Date de demande"; }
-    td:nth-of-type(2):before { content: "Nom du topo"; }
-    td:nth-of-type(3):before { content: "Emprunteur"; }
-    td:nth-of-type(4):before { content: "Statut"; }
-    td:nth-of-type(5):before { content: ""; }
-    td:nth-of-type(6):before { content: ""; }
+    td:nth-of-type(2):before { content: "Date d'emprunt"; }
+    td:nth-of-type(3):before { content: "Date de retour"; }
+    td:nth-of-type(4):before { content: "Nom"; }
+    td:nth-of-type(5):before { content: "Propriétaire"; }
+    td:nth-of-type(6):before { content: "Status"; }
     td:nth-of-type(7):before { content: ""; }
     td:nth-of-type(8):before { content: ""; }
     td:nth-of-type(9):before { content: ""; }
