--- a/src/main/resources/templates/utils/menu.html
+++ b/src/main/resources/templates/utils/menu.html
@@ -23,8 +23,9 @@
                     </form>
                     <a sec:authorize="hasAuthority('USER')" class="dropdown-item" href="/topo/topoItemForm">Ajouter Topo</a>
                     <a sec:authorize="hasAuthority('USER')" class="dropdown-item" href="/topo/myTopos">Mes Topos</a>
+                    <a sec:authorize="hasAuthority('USER')" class="dropdown-item" href="/reservation/mesEmprunts">Mes emprunts</a>
                     <a sec:authorize="hasAuthority('USER')" class="dropdown-item" href="/reservation/reservationItemForm">Réserver un Topo</a>
-                    <a sec:authorize="hasAuthority('USER')" class="dropdown-item" href="/reservation/myReservations">Mes réservations</a>
+                    <a sec:authorize="hasAuthority('USER')" class="dropdown-item" href="/reservation/myReservations">Mes réservation</a>
                 </div>
 
             </li>
