--- a/src/main/resources/templates/security/register.html
+++ b/src/main/resources/templates/security/register.html
@@ -44,6 +44,10 @@
         <label for="passwordConfirm">Confirmer le mot de passe</label>
         <input type="password" name="passwordConfirm" class="form-control" id="passwordConfirm" placeholder="mot de passe">
     </div>
+    <div class="form-group">
+        <label for="mail">Email</label>
+        <input type="email" name="mail" class="form-control" id="mail" placeholder="nom@email.com">
+    </div>
     <div class="form-check">
         <input type="checkbox" class="form-check-input" id="rememberMe">
         <label class="form-check-label" for="rememberMe">se souvenir de moi</label>
