--- a/src/main/resources/templates/voie/voieList.html
+++ b/src/main/resources/templates/voie/voieList.html
@@ -8,6 +8,8 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <!--/* Per-page placeholder for additional links */-->
+  <link rel="stylesheet" th:href="@{/css/list.css}"/>
+  <link rel="stylesheet" th:href="@{/css/voieList.css}"/>
 
 
 </head>
@@ -16,7 +18,7 @@
   <div th:insert="~{utils/menu :: menu}"></div>
 
   <h1>Liste des voies</h1>
-  <table class="table">
+  <table>
     <thead>
     <tr>
       <th>nom</th>
